Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="box">
           <ul>
-              <li><a  class="h" href="./home.html">HOME</a></li>
+             <div class="color"> <li><a  class="h" href="./home.html">HOME</a></li></div>
             <li><a class="c" href="https://wa.me/923054725930">CONTACT ME</a></li>
             <li class="s"><a href="#">SERVICES</a></li>
             <li class="a"><a href="#">ABOUT ME </a></li>
