Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
           </ul>
         </div>
     </nav>
+   <H4>quiad e Azam once said:</H4>
+      <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi ipsa magnam esse autem ipsam, consequuntur natus ratione debitis quas tempore facere expedita ullam iure possimus praesentium? Quis, sequi corrupti</blockquote>
+    
 </body>
 </html>
