upadte in h4 and div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="one">
+        <h4>malik associates & firm</h4>
+      </div>
     <nav>
+      
         <div class="box">
           <ul>
              <div class="color"> <li><a  class="h" href="./home.html">HOME</a></li></div>
