Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,21 +8,32 @@
 </head>
 <body>
   <div class="one">
-        <h4>malik associates & firm</h4>
+        <h4 >malik associates <b>&</b> firm </h4>
       </div>
+
     <nav>
       
         <div class="box">
           <ul>
-             <div class="color"> <li><a  class="h" href="./home.html">HOME</a></li></div>
-            <li><a class="c" href="https://wa.me/923054725930">CONTACT ME</a></li>
-            <li class="s"><a href="#">SERVICES</a></li>
-            <li class="a"><a href="#">ABOUT ME </a></li>
+            <li> <a class="link" href="./home.html">HOME</a></li>
+            <li> <a class="link" href="https://wa.me/923054725930">CONTACT ME</a></li>
+            <li><a class="link" href="#">SERVICES</a></li>
+            <li ><a class="link" href="#">ABOUT ME </a></li>
           </ul>
         </div>
     </nav>
-   <H4>quiad e Azam once said:</H4>
+    <main>
+ <div class="photo">
+      <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5DaIgOEVQ6YxJWoFzUNhPtQFbpdov25oww&s" alt="international court of justice"> -->
+    </div>
+   <h5>quiad e Azam once said:</h5>
       <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi ipsa magnam esse autem ipsam, consequuntur natus ratione debitis quas tempore facere expedita ullam iure possimus praesentium? Quis, sequi corrupti</blockquote>
+   
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
