changes in lay-out

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           
           <!-- <img src="icons8-copyright-50.png" alt=""> -->
           <span>© 2025 by CHAMBER OF ADVOCATES & ASSOCIATES</span>
-          <span class="facebook-logo"><img src="facebook-logo.png" alt=""><a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons"> FaceBook  Freepik - Flaticon</a></span>
+          <span class="facebook-logo"><img src="facebook-logo.png" alt="">
+            <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons"> FaceBook  Freepik - Flaticon</a></span>
          </div>
     </footer>
     
