--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
     </main>
 
     <footer>
-         <div class="copywrite">
-          
-          <!-- <img src="icons8-copyright-50.png" alt=""> -->
-          <span>© 2025 by CHAMBER OF ADVOCATES & ASSOCIATES</span>
-          <span class="facebook-logo"><img src="facebook-logo.png" alt="">
-            <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons"> FaceBook  Freepik - Flaticon</a></span>
-         </div>
+
+      <div class="footer">
+
+        <a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+ <a href="https://youtube.com">
+  <i class="fa-brands fa-youtube"></i></a>
+ <a href="https://twitter.com.pk"><i class="fa-brands fa-twitter"></i></a>
+ <a href="https://linkedIn.com"><i class="fa-brands fa-linkedin-in"></i></a>
+ <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+<hr>
+<p>copyright © 2011 </p>
+
+    </div>
     </footer>
     
 </body>
