Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <main>
     <div class="photo">
-      <img src=".jpeg" alt="Malik Associates Photo">
+      <img src="WhatsApp Image 2025-07-29 at 11.29.28 PM.jpeg" alt="Malik Associates Photo">
     </div>
   </main>
 
