Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <a href="#"><i class='bx bxl-instagram'></i></a>
         <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-        <a href="#"><i class='bx bxl-twitter'></i></a>
+        <a href="https://wa.me/923054725930"><i class='bx bxl-whatsapp'></i></a>
         <a href="#"><i class='bx bxl-facebook-circle'></i></a>
         
          <div>
