--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul class="nav-links">
         <li><a class="link" href="./home.html">HOME</a></li>
-        <li><a class="link" href="https://wa.me/923054725930">CONTACT ME</a></li>
+        <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="#">SERVICES</a></li>
         <li><a class="link" href="#">ABOUT ME</a></li>
       </ul>
