--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,6 +61,260 @@ nav .link:hover {
 
 
     
+
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ahsan & Partners | Advocates & Legal Consultants</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<style>
+    /* Reset some basic stuff */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Typography + base */
+body {
+  font-family: 'Georgia', serif;
+  line-height: 1.6;
+  color: #222;
+  background-color: #f9f9f9;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 2rem 0;
+}
+
+/* Headings */
+h1, h2 {
+  color: #1a1a1a;
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 2rem;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 0.5rem;
+  margin-top: 1rem;
+}
+
+/* Hero Section */
+#hero {
+  background: url('https://images.unsplash.com/photo-1590608897129-79da98d159b5') no-repeat center center/cover;
+  color: white;
+  text-align: center;
+  padding: 5rem 1rem;
+  position: relative;
+}
+
+#hero::after {
+  content: '';
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  z-index: 0;
+}
+
+#hero .container {
+  position: relative;
+  z-index: 1;
+}
+
+#hero h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+#hero p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+/* Sections */
+section {
+  background-color: white;
+  margin-bottom: 2rem;
+  padding: 2rem 0;
+  border-bottom: 1px solid #eee;
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  background-color: #222;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
+  border-radius: 4px;
+  margin: 0.5rem 0.5rem 0;
+  transition: background 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #444;
+}
+
+/* Practice Areas List */
+.services {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1rem;
+  padding: 1rem 0;
+}
+
+.services li {
+  background: #f4f4f4;
+  padding: 1rem;
+  border-radius: 5px;
+  font-size: 1.1rem;
+}
+
+/* Testimonials */
+blockquote {
+  background: #f1f1f1;
+  padding: 1.5rem;
+  margin: 1rem 0;
+  border-left: 5px solid #555;
+  font-style: italic;
+}
+
+cite {
+  display: block;
+  margin-top: 0.5rem;
+  text-align: right;
+  color: #555;
+}
+
+/* Lists inside other sections */
+ul {
+  list-style: none;
+  padding-left: 1rem;
+}
+
+ul li {
+  margin-bottom: 0.5rem;
+  font-size: 1.1rem;
+}
+
+/* Responsive text sizes */
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 2rem;
+  }
+
+  .btn {
+    padding: 0.6rem 1rem;
+  }
+}
+
+</style>
+<body>
+
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="container">
+      <h1>Protecting Your Rights. Defending Your Future.</h1>
+      <p>Pakistan’s Premier Legal Team — Over 35 Years of Excellence in Litigation, Corporate Law & Constitutional Advocacy.</p>
+      <a href="#contact" class="btn">Request Consultation</a>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>
+        Ahsan & Partners is a legacy-driven law firm founded by some of Pakistan’s most respected legal minds.
+        With offices in Lahore, Karachi, and Islamabad, we provide strategic counsel and courtroom representation
+        in matters of constitutional law, civil litigation, corporate advisory, and criminal defense.
+      </p>
+    </div>
+  </section>
+
+  <!-- Practice Areas -->
+  <section id="practice-areas">
+    <div class="container">
+      <h2>Our Practice Areas</h2>
+      <ul class="services">
+        <li>🏛️ Constitutional & Human Rights Law</li>
+        <li>⚖️ Civil & Commercial Litigation</li>
+        <li>💼 Corporate & Tax Advisory</li>
+        <li>👨‍👩‍👧 Family & Property Disputes</li>
+        <li>🕊️ Criminal Defense</li>
+        <li>🧾 Contract Drafting & Legal Opinions</li>
+      </ul>
+      <a href="#services" class="btn">Explore All Services</a>
+    </div>
+  </section>
+
+  <!-- Why Choose Us -->
+  <section id="why-us">
+    <div class="container">
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>✅ Trusted for Landmark Cases</li>
+        <li>✅ 35+ Years of Legal Mastery</li>
+        <li>✅ Top Advocates at High Court & Supreme Court</li>
+        <li>✅ Client Confidentiality & Integrity First</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section id="testimonials">
+    <div class="container">
+      <h2>What Our Clients Say</h2>
+      <blockquote>
+        "Ahsan & Partners turned the tide in a case I thought I had lost. True professionals."  
+        <cite>— Imran S., Lahore</cite>
+      </blockquote>
+      <blockquote>
+        "The only firm I trust with my business legal matters. Precise, responsive, and brilliant."  
+        <cite>— Sara K., Karachi</cite>
+      </blockquote>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section id="cta">
+    <div class="container">
+      <h2>Ready to Talk?</h2>
+      <p>Don’t wait for justice. Let our experts guide you.</p>
+      <a href="#contact" class="btn">Free Case Evaluation</a>
+      <a href="https://wa.me/923001234567" class="btn">WhatsApp Us</a>
+    </div>
+  </section>
+
+  <!-- Accreditations -->
+  <section id="accreditations">
+    <div class="container">
+      <h2>Accreditations & Media Mentions</h2>
+      <ul>
+        <li>✔️ Member, Supreme Court Bar Association</li>
+        <li>✔️ Featured on GEO, ARY, Dunya News</li>
+        <li>✔️ Legal Advisor to Government Entities & NGOs</li>
+      </ul>
+    </div>
+  </section>
 
 </body>
 </html>
