Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="nav-links">
         <li><a class="link" href="./home.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
-        <li><a class="link" href="#">SERVICES</a></li>
+        <li><a class="link" href="">PRACTICE AREAS</a></li>
         <li><a class="link" href="#">ABOUT ME</a></li>
       </ul>
     </nav>
