--- a/contact.html
+++ b/contact.html
@@ -207,8 +207,8 @@ nav .link:hover {
     <nav>
       <ul class="nav-links">
         <li><a class="link" href="./index.html">HOME</a></li>
-        <li><a class="link" href="https://wa.me/923054725930">CONTACT ME</a></li>
-        <li><a class="link" href="./service.html">SERVICES</a></li>
+        <li><a class="link" href="./contact.html">CONTACT ME</a></li>
+        <li><a class="link" href="./service.html">PRACTICE AREAS</a></li>
         <li><a class="link" href="#">ABOUT ME</a></li>
       </ul>
     </nav>
