Update index.html and style.css

--- a/contact.html
+++ b/contact.html
@@ -208,8 +208,8 @@ nav .link:hover {
       <ul class="nav-links">
         <li><a class="link" href="./index.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
-        <li><a class="link" href="./service.html">PRACTICE AREAS</a></li>
-        <li><a class="link" href="#">ABOUT ME</a></li>
+        <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
+        <li><a class="link" href="./about.html">ABOUT ME</a></li>
       </ul>
     </nav>
   </header>
