--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <ul class="nav-links">
         <li><a class="link" href="./home.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
-        <li><a class="link" href="">PRACTICE AREAS</a></li>
-        <li><a class="link" href="#">ABOUT ME</a></li>
+        <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
+        <li><a class="link" href="./about.html">ABOUT ME</a></li>
       </ul>
     </nav>
   </header>
