--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
 
     <nav>
       <ul class="nav-links">
-        <li><a class="link" href="./index.html">MAIN</a></li>
-        <li><a class="link" href="https://wa.me/923054725930">CONTACT ME</a></li>
-        <li><a class="link" href="#">SERVICES</a></li>
-        <li><a class="link" href="#">ABOUT ME</a></li>
+        <li><a class="link" href="./index.html">MAIN MENU</a></li>
+        <li><a class="link" href="./contact.html">CONTACT ME</a></li>
+        <li><a class="link" href="./Practice.html">PRACTICE AREA</a></li>
+        <li><a class="link" href="./about.html">ABOUT ME</a></li>
       </ul>
     </nav>
   </header>
