Update index.html and style.css

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li><a class="link" href="./index.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
-        <li><a class="link" href="./about.html">ABOUT ME</a></li>
+        <li><a class="link" href="./about.html">ABOUT US</a></li>
       </ul>
     </nav>
   </header>
