--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@ nav .link:hover {
         <li><a class="link" href="./index.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
-        <li><a class="link" href="./about.html">ABOUT ME</a></li>
+        <li><a class="link" href="./about.html">ABOUT US</a></li>
       </ul>
     </nav>
   </header>
@@ -284,7 +284,7 @@ nav .link:hover {
 <section id="cta">
   <div class="container btn-group">
     <button class="btn" onclick="openCaseEvaluation()">Free Case Evaluation</button>
-    <a href="https://wa.me/923001234567" class="btn">WhatsApp Us</a>
+    <a href="https://wa.me/923054725930" class="btn">WhatsApp Us</a>
   </div>
 </section>
 
