--- a/Practice.html
+++ b/Practice.html
@@ -145,7 +145,7 @@ nav .link:hover {
         <li><a class="link" href="./index.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
-        <li><a class="link" href="./about.html">ABOUT ME</a></li>
+        <li><a class="link" href="./about.html">ABOUT US</a></li>
       </ul>
     </nav>
   </header>
