--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <li><a class="link" href="./index.html">MAIN MENU</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="./Practice.html">PRACTICE AREA</a></li>
-        <li><a class="link" href="./about.html">ABOUT ME</a></li>
+        <li><a class="link" href="./about.html">ABOUT US</a></li>
       </ul>
     </nav>
   </header>
