--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a class="link" href="./home.html">HOME</a></li>
         <li><a class="link" href="./contact.html">CONTACT ME</a></li>
         <li><a class="link" href="./Practice.html">PRACTICE AREAS</a></li>
-        <li><a class="link" href="./about.html">ABOUT ME</a></li>
+        <li><a class="link" href="./about.html">ABOUT US</a></li>
       </ul>
     </nav>
   </header>
