Update index.html and style.css

--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,7 @@ nav .link:hover {
     <div class="container">
       <h1>Protecting Your Rights. Defending Your Future.</h1>
       <p>Pakistan’s Premier Legal Team — Over 35 Years of Excellence in Litigation, Corporate Law & Constitutional Advocacy.</p>
-      <a href="mailto:mrmsf019@gmail.com?subject= I need your help &body=Hello,." class="btn">Request Consultation</a>
+      <a href="mailto:lawyerali.pk@gmail.com?subject= I need your help &body=Hello,." class="btn">Request Consultation</a>
     </div>
   </section>
 
